<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3e50"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_player"
            android:textSize="20sp"
            android:textColor="#ecf0f1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:background="#95a5a6"
            android:text="@string/play"
            android:textColor="#2c3e50"  />

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:background="#95a5a6"
            android:text="@string/stop"
            android:textColor="#2c3e50"  />

        <Button
            android:id="@+id/button4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:background="#95a5a6"
            android:text="@string/back"
            android:textColor="#2c3e50"  />

    </LinearLayout>
</RelativeLayout>